# monorepo

./: .envrc  .gitignore  Cargo.toml  MODULE.bazel  go.MODULE.bazel  rust-project.json  rust.MODULE.bazel
LeetCode/mergesortedarray/: mergesortedarray.go
docs/: rust.md
guessing-game/: BUILD.bazel  Cargo.toml
guessing-game/src/: main.rs
hello-world-rust/: BUILD  Cargo.toml
hello-world-rust/src/: main.rs
rules/: BUILD.bazel  foo.bzl  gosec.bzl
rust-control-flow/: BUILD.bazel  Cargo.toml
rust-control-flow/src/: main.rs
rust-functions/: BUILD.bazel
rust-functions/src/: main.rs
rust-types/: BUILD.bazel  Cargo.toml
rust-types/src/: main.rs
rust-variables/: BUILD.bazel  Cargo.toml
tools/: BUILD.bazel
variables-rust/: BUILD.bazel
variables-rust/src/: main.rs
